src/styles/index-page/partners.scss
.partners{
    background: #f6f6f6;
    color: #185f65;

    h2{
      width: 85vw;
      padding-top: 1.6rem;
      margin: 0 auto;
    }
}
.partners-container {
  background: #f6f6f6;
  display: grid;
  justify-content: start;
  overflow: scroll;
  padding: 2rem 0;
  &::-webkit-scrollbar {
    display: none;
  }
  a{
   display: flex;
   justify-content: center;
   align-items: center;

  }
  @media screen and (max-width: 1100px) {
    grid-template-columns: repeat(8, 1fr);
    .partner {
      padding: 0 2rem;
      img{

      }
    }
    .mobile {
      visibility: hidden;
      width: 0;
      height: 0;
    }
  }
  @media screen and (min-width: 1100px) {
    grid-template-columns: repeat(4, 1fr);
    .partner {
      padding: 2rem 0;
    }
  }
  .partner {

    display: flex;
    justify-content: center;
    align-items: center;


    img {
      mix-blend-mode: multiply;
      height: 100px;
      max-width: 250px;
      object-fit: contain;
    }
  }
}

